--- a/professional/summary.html
+++ b/professional/summary.html
@@ -79,7 +79,7 @@
             </tr>
             <tr>
                 <td>Mar 2022</td>
-                <td><a href="https://www.htctw.org/students-and-early-career-professionals">HtCtW One-Week Collaborative Workshop</a></td>
+                <td><a href="https://www.how-to-change-the-world.org/">HtCtW One-Week Collaborative Workshop</a></td>
                 <td>How to Change the World</td>
                 <td><a href="https://eu.badgr.com/public/assertions/VoUInjt7T-OrCO36ALma8g" target="_blank">Access</a></td>
             </tr>
