--- a/travel/summary.html
+++ b/travel/summary.html
@@ -90,7 +90,7 @@
                             Countries I've Visited
                         </h3>
                         <hr>
-                            <p>Mexico, Ireland, <br> Andorra, Austria, Belgium, Brazil, Colombia, Czech Republic, Denmark, France, Germany, Greece, Hungary, Ireland, Italy, Liechtenstein, Luxembourg, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, San Marino, Singapore, Slovakia, Spain, Sweden, Switzerland, Thailand, Turkey, United Arab Emirates, United States, Vatican City State </p>
+                            <p>Mexico, Ireland, <br> Andorra, Austria, Belgium, Brazil, Colombia, Czech Republic, Denmark, Germany, Greece, Hungary, Ireland, Italy, Liechtenstein, Luxembourg, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, San Marino, Singapore, Slovakia, Spain, Sweden, Switzerland, Thailand, Turkey, United Arab Emirates, United States, Vatican City </p>
                         <h3>
                             Countries I've Lived
                         </h3>
