--- a/teaching/layout.html
+++ b/teaching/layout.html
@@ -62,6 +62,7 @@
                         <ul class="nobull">
                             <!-- <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li> -->
                             <li><a class="whitelink" href="../teaching/experience.html"> Teaching Experience</a></li>
+                            <li><a class="whitelink" href="../teaching/f3.html"> Heat Transfer</a></li>
                             <li><a class="whitelink" href="../teaching/f3.html"> Fluid Mechanics Lab</a></li>
                             <li><a class="whitelink" href="../teaching/thermo.html"> Thermodynamics</a></li>
                             <li><a class="whitelink" href="../teaching/imas.html">Mathematics</a></li>
