--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -46,7 +46,7 @@
             </p> 
 
             <p>
-                I served as a tutor for the Institution of Mechanical Engineers (IMechE), teaching <a href=".../teaching/thermodynamics.html">Thermodynamics</a> to about 60 students from various engineering departments while still pursuing my undergraduate degree.
+                I served as a tutor for the Institution of Mechanical Engineers (IMechE), teaching <a href=".../teaching/thermo.html">Thermodynamics</a> to about 60 students from various engineering departments while still pursuing my undergraduate degree.
             </p>
 
             <p>
