--- a/education/PhD.html
+++ b/education/PhD.html
@@ -71,7 +71,10 @@
                 I also envision myself as a scientist rather than restricting myself to the label of a “mechanical engineer” confined to purely mechanical work. I embrace an interdisciplinary approach to drive innovation and strongly value collaboration, which is a key aspect of my current research. Multidisciplinarity is essential for addressing complex global challenges, and I strive to integrate knowledge from various fields to develop innovative solutions.
             </p>
             <p>
-                My Ph.D. research focuses on combustion, specifically investigating the science and physics of novel <b>metal-fuel combustion</b>. Metal as a fuel? If this concept sounds new (or even unbelievable), I invite you to read more!
+                My Ph.D. research focuses on combustion, specifically exploring the science and physics of novel metal-fuel combustion. I am fortunate to work with my advisor <a href="https://www.mcgill.ca/mecheng/jeffrey-bergthorson">Prof. Jeffrey Bergthorson</a> and my “Science Father” <a href="https://scholar.google.com/citations?hl=en&user=s5DiW9cAAAAJ&view_op=list_works&sortby=pubdate">Dr. Sam Goroshin</a> — both of whom are world leaders in metal-fuel combustion.
+            </p>
+            <p>
+                Metal as a fuel? If this concept sounds new (or even unbelievable), I invite you to read more!
             </p>
 
             <h3>
