--- a/travel/summary.html
+++ b/travel/summary.html
@@ -87,11 +87,6 @@
                             <span class="dot"></span> 
                         </div>
                         <h3>
-                            Countries I've Visited
-                        </h3>
-                        <hr>
-                            <p>Mexico, Ireland, <br> Andorra, Austria, Belgium, Brazil, Colombia, Czech Republic, Denmark, Germany, Greece, Hungary, Ireland, Italy, Liechtenstein, Luxembourg, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, San Marino, Singapore, Slovakia, Spain, Sweden, Switzerland, Thailand, Turkey, United Arab Emirates, United States, Vatican City </p>
-                        <h3>
                             Countries I've Lived
                         </h3>
                         <hr>
@@ -106,8 +101,12 @@
                 showSlides();
             </script>
 
+            <h3>
+                Countries I've Visited
+            </h3>
+            <hr>
             <p>
-                Below are the locations I have visited or traveled to before.
+                Mexico, Ireland, <br> Andorra, Austria, Belgium, Brazil, Colombia, Czech Republic, Denmark, Germany, Greece, Hungary, Ireland, Italy, Liechtenstein, Luxembourg, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, San Marino, Singapore, Slovakia, Spain, Sweden, Switzerland, Thailand, Turkey, United Arab Emirates, United States, Vatican City 
             </p>
 
             <div class="container">
