--- a/teaching/layout.html
+++ b/teaching/layout.html
@@ -37,7 +37,8 @@
             <div class="aside-content">
                 <b class="unclickable">Content:</b>
                 <ul class="nobull">
-                    <li><a class="whitelink" href="../teaching/experience.html"> Teaching Experience</a></li>
+                    <li><a class="whitelink" href="../teaching/experience.html">Teaching Experience</a></li>
+                    <li><a class="whitelink" href="../teaching/heattransfer.html">Heat Transfer</a></li>
                     <li><a class="whitelink" href="../teaching/f3.html"> Fluid Mechanics Lab</a></li>
                     <li><a class="whitelink" href="../teaching/thermo.html">Thermodynamics</a></li>
                     <li><a class="whitelink" href="../teaching/imas.html">Mathematics</a></li>
@@ -62,7 +63,7 @@
                         <ul class="nobull">
                             <!-- <li><a class="whitelink" href="../teaching/philosophy.html"> Teaching Statement</a></li> -->
                             <li><a class="whitelink" href="../teaching/experience.html"> Teaching Experience</a></li>
-                            <li><a class="whitelink" href="../teaching/f3.html"> Heat Transfer</a></li>
+                            <li><a class="whitelink" href="../teaching/heattransfer.html"> Heat Transfer</a></li>
                             <li><a class="whitelink" href="../teaching/f3.html"> Fluid Mechanics Lab</a></li>
                             <li><a class="whitelink" href="../teaching/thermo.html"> Thermodynamics</a></li>
                             <li><a class="whitelink" href="../teaching/imas.html">Mathematics</a></li>
