--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -81,7 +81,7 @@
                         Analyzed my teaching and learning approach, designed diverse teaching and learning strategies to foster intercultural awareness and inclusivity, and developed my own teaching philosophy.  
                     </li>
                     <li>
-                        Instructional Design in Engineering Education** (one semester):  
+                        <a href=".../professional/FACC511.html">Instructional Design in Engineering Education</a> (one semester):  
                         Wrote course outlines based on Canadian Engineering Accreditation Board (CEAB) Graduate Attributes, engaged in self-reflective teaching practice, developed assessment strategies, and designed an engineering course.  
                     </li>
                     <li>
