--- a/professional/summary.html
+++ b/professional/summary.html
@@ -73,7 +73,7 @@
             </tr>
             <tr>
                 <td>Apr 2023</td>
-                <td><a href=".../professional/FACC.html">Instructional Design in Engineering Education</a></td>
+                <td><a href="../professional/FACC511.html">Instructional Design in Engineering Education</a></td>
                 <td>Faculty of Engineering, McGill University</td>
                 <td>In my transcript</td>
             </tr>
