--- a/teaching/heattransfer.html
+++ b/teaching/heattransfer.html
@@ -65,7 +65,7 @@
             </p>
 
             <div class="paragraph image">
-                <iframe width="100%" height="450" src="https://www.youtube.com/shorts/z6-UcC2im9o">
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/z6-UcC2im9o">
                 The video from ScienceExplainedOfficial, which visually explains Wien’s Displacement Law - note that hotter objects do not appear red, and cooler objects do not necessarily appear blue.
                 </iframe>
             </div>
