--- a/teaching/heattransfer.html
+++ b/teaching/heattransfer.html
@@ -107,8 +107,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="../teaching/image/SolarEclipse.jpg" width="100%">
-                        <label>Photo taken by me: Evolution of solar eclipse in Montreal on 8 April 2024</label>
+                        <img src="../teaching/image/SolarEclipse.png" width="100%">
+                        <label>Evolution of solar eclipse in Montreal on 8 April 2024</label>
                     </div>
                     <div class="col-md-6">
                         <img src="../teaching/image/Totality.jpg" width="100%">
