--- a/travel/summary.html
+++ b/travel/summary.html
@@ -106,7 +106,7 @@
             </h3>
             <hr>
             <p>
-                Mexico, Ireland, <br> Andorra, Austria, Belgium, Brazil, Colombia, Czech Republic, Denmark, Germany, Greece, Hungary, Ireland, Italy, Liechtenstein, Luxembourg, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, San Marino, Singapore, Slovakia, Spain, Sweden, Switzerland, Thailand, Turkey, United Arab Emirates, United States, Vatican City 
+                Andorra, Austria, Belgium, Brazil, Colombia, Czech Republic, Denmark, Germany, Greece, Hungary, Ireland, Italy, Liechtenstein, Luxembourg, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, San Marino, Singapore, Slovakia, Spain, Sweden, Switzerland, Thailand, Turkey, United Arab Emirates, United States, Vatican City 
             </p>
 
             <div class="container">
