--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -46,11 +46,11 @@
             </p> 
 
             <p>
-                I served as a tutor for the Institution of Mechanical Engineers (IMechE), teaching <a href=".../teaching/thermo.html">Thermodynamics</a> to about 60 students from various engineering departments while still pursuing my undergraduate degree.
+                I served as a tutor for the Institution of Mechanical Engineers (IMechE), teaching <a href="../teaching/thermo.html">Thermodynamics</a> to about 60 students from various engineering departments while still pursuing my undergraduate degree.
             </p>
 
             <p>
-                At the University of Saskatchewan, I worked as a lab demonstrator for the <a href=".../teaching/f3.html">Fluid Mechanics Lab</a>, guiding students on how to use a wind tunnel to study boundary layer behaviour and a wind turbine to analyze energy conversion and efficiency. Additionally, I was a teaching assistant for Engineering Mechanics I (Introduction to Statics), Mechanical Design, and Industrial Design Project, where students tackled real-world engineering problems provided by engineering companies in Saskatoon.
+                At the University of Saskatchewan, I worked as a lab demonstrator for the <a href="../teaching/f3.html">Fluid Mechanics Lab</a>, guiding students on how to use a wind tunnel to study boundary layer behaviour and a wind turbine to analyze energy conversion and efficiency. Additionally, I was a teaching assistant for Engineering Mechanics I (Introduction to Statics), Mechanical Design, and Industrial Design Project, where students tackled real-world engineering problems provided by engineering companies in Saskatoon.
             </p>
 
             <p>
