--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -89,11 +89,9 @@
 
         <p>
             Why is Bloom’s Taxonomy Important?
-            <ul>
-                <li>&#10004; Helps educators structure curriculum development by covering a range of cognitive skills.</li>
-                <li>&#10004; Ensures that assessments go beyond memorization and test higher-order thinking.</li>
-                <li>&#10004; Encourages active learning strategies that push students toward deeper engagement and understanding.</li>
-            </ul>
+            &#10004; Helps educators structure curriculum development by covering a range of cognitive skills.
+            &#10004; Ensures that assessments go beyond memorization and test higher-order thinking.
+            &#10004; Encourages active learning strategies that push students toward deeper engagement and understanding.
         </p>
 
         <div class="container">
