--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -56,12 +56,10 @@
         <hr>
         <p>
             In Canada, every accredited engineering program of all institutions aligns with the CEAB Graduate Attributes framework, which defines 12 essential competencies for engineering graduates. These attributes ensure that graduates are:
-            <ul>
-                <li>&#10004; Competent, well-rounded, and prepared for professional engineering licensing path (e.g. P.Eng.).</li>
-                <li>&#10004; Equipped with technical, ethical, and professional skills required for real-world applications.</li>
-                <li>&#10004; Meeting high-quality professional standards in engineering education.</li>
-                <li>&#10004; Benefiting from global recognition and licensure mobility.</li>
-            </ul>
+            &#10004; Competent, well-rounded, and prepared for professional engineering licensing path (e.g. P.Eng.).
+            &#10004; Equipped with technical, ethical, and professional skills required for real-world applications.
+            &#10004; Meeting high-quality professional standards in engineering education.
+            &#10004; Benefiting from global recognition and licensure mobility.
         </p>
 
         <div class="container">
