--- a/teaching/heattransfer.html
+++ b/teaching/heattransfer.html
@@ -66,7 +66,7 @@
 
             <div class="paragraph image">
                 <iframe width="100%" height="450" src="https://www.youtube.com/embed/z6-UcC2im9o">
-                The video from ScienceExplainedOfficial, which visually explains Wien’s Displacement Law - note that hotter objects do not appear red, and cooler objects do not necessarily appear blue.
+                <label>The video from ScienceExplainedOfficial, which visually explains Wien’s Displacement Law - note that hotter objects do not appear red, and cooler objects do not necessarily appear blue.</label>
                 </iframe>
             </div>
 
@@ -75,7 +75,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../teaching/image/WeinLaw.png" width="100%">
-                        Wein's Displacement Law - reproduced from <a href="  https://www.thermal-engineering.org/what-is-wiens-displacement-law-definition/">Thermal Engineering</a>
+                        <label>Wein's Displacement Law - reproduced from <a href="  https://www.thermal-engineering.org/what-is-wiens-displacement-law-definition/">Thermal Engineering</a></label>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../teaching/image/MarsEclipse.png" width="60%">
-                        "Solar eclipse" when Phobos passes in front of the Sun when viewed from Mars - reproduced from <a href="https://photojournal.jpl.nasa.gov/catalog/PIA17356">NASA JPL-Caltech</a>
+                        <label>"Solar eclipse" when Phobos passes in front of the Sun when viewed from Mars - reproduced from <a href="https://photojournal.jpl.nasa.gov/catalog/PIA17356">NASA JPL-Caltech</a></label>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
