--- a/education/PhD.html
+++ b/education/PhD.html
@@ -134,7 +134,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../education/image/EnergyDensity.png" width="100%">
-                        Left: Energy density of different energy carriers (adopted from Bergthorson, 2018: <a href="https://doi.org/10.1016/j.pecs.2018.05.001" target="_blank">https://doi.org/10.1016/j.pecs.2018.05.001)</a>. Right: Illustration of volume required to store different energy carriers based on their volumetric energy density.
+                        <label>Left: Energy density of different energy carriers (adopted from Bergthorson, 2018: <a href="https://doi.org/10.1016/j.pecs.2018.05.001" target="_blank">https://doi.org/10.1016/j.pecs.2018.05.001)</a>. Right: Illustration of volume required to store different energy carriers based on their volumetric energy density.</label>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
@@ -153,7 +153,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../education/image/MetalFuelCycle.png" width="100%">
-                        <small>Metal Fuel Cycle: (1) Conversion of renewable energy (e.g. solar, wind) into electrical energy for metal reduction; (2) Reduction of metal oxides where electrical energy is converted into chemical energy stored in the metal; (3) The stored energy in metal fuels can be transported to various locations (energy carriers); (4) Burning metal on demand releases the stored chemical energy as heat; (5) Metal combustion products are solid and can be captured; (6) The captured metal oxides can be transported back for reduction to be reused in a closed sustainable loop.</small>
+                        <label><small>Metal Fuel Cycle: (1) Conversion of renewable energy (e.g. solar, wind) into electrical energy for metal reduction; (2) Reduction of metal oxides where electrical energy is converted into chemical energy stored in the metal; (3) The stored energy in metal fuels can be transported to various locations (energy carriers); (4) Burning metal on demand releases the stored chemical energy as heat; (5) Metal combustion products are solid and can be captured; (6) The captured metal oxides can be transported back for reduction to be reused in a closed sustainable loop.</small></label>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
@@ -170,7 +170,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../education/image/SiliconFlames.png" width="100%">
-                        Stabilized silicon flames on a self-developed burner at various concentrations, captured with the same camera exposure. The flames are diagnosed using a green laser for particle image velocimetry (PIV) to investigate burning velocity.
+                        <label>Stabilized silicon flames on a self-developed burner at various concentrations, captured with the same camera exposure. The flames are diagnosed using a green laser for particle image velocimetry (PIV) to investigate burning velocity.</label>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
