--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -124,7 +124,7 @@
         </p>
 
         <p>
-            Unlike passive learning, where students primarily listen to lectures, active learning enhances critical thinking, deepens understanding, and improves knowledge retention by requiring students to apply concepts in real-time. Studies have shown that active learning leads to higher academic performance and greater student motivation, making it a particularly effective strategy in STEM education (<a href="https://doi.org/10.1073/pnas.1319030111">Freeman et al., 2014</a>, <a href="https://doi.org/10.1073/pnas.1916903117">Theobald et al., 2020</a>).
+            Unlike passive learning, where students primarily listen to lectures, active learning enhances critical thinking, deepens understanding, and improves knowledge retention by requiring students to apply concepts in real-time. Studies have shown that active learning leads to higher academic performance and greater student motivation, making it a particularly effective strategy in STEM education (<a href="https://doi.org/10.1073/pnas.1319030111" target="_blank">Freeman et al., 2014</a>, <a href="https://doi.org/10.1073/pnas.1916903117" target="_blank">Theobald et al., 2020</a>).
         </p>
 
         <p>
