--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -97,7 +97,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <img src="../professional/image/Blooms_Taxonomy.png" width="100%">
-                    <label>The cognitive domain of Bloom's Taxonomy (reproduced from <a href="https://chem-eng.utoronto.ca/graduate-attributes/">Department of Chemical Engineering & Applied Chemistry, University of Toronto</a>)</label>
+                    <label>The cognitive domain of Bloom's Taxonomy (reproduced from <a href="https://chem-eng.utoronto.ca/graduate-attributes/" target="_blank">Department of Chemical Engineering & Applied Chemistry, University of Toronto</a>)</label>
                 </div>
                 <div class="col-md-2"></div>
             </div>
