--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -54,7 +54,7 @@
             </p>
 
             <p>
-                At McGill University, I conducted lab courses in Heat Transfer, Thermodynamics, and Fluid Mechanics. I guided students in using various pieces of equipment, including a two-stage compressor, a wind tunnel, a piping network, a heat exchanger, and more, to help them understand fundamental engineering concepts. I also worked as a teaching assistant for Heat Transfer and Thermodynamics, leading weekly tutorial sessions and providing consultation hours and revision sessions to support students outside of regular class hours.
+                At McGill University, I conducted lab courses in <a href="../teaching/heattransfer.html">Heat Transfer</a>, Thermodynamics, and Fluid Mechanics. I guided students in using various pieces of equipment, including a two-stage compressor, a wind tunnel, a piping network, a heat exchanger, and more, to help them understand fundamental engineering concepts. I also worked as a teaching assistant for Heat Transfer and Thermodynamics, leading weekly tutorial sessions and providing consultation hours and revision sessions to support students outside of regular class hours.
             </p>
 
             <p>
