--- a/teaching/heattransfer.html
+++ b/teaching/heattransfer.html
@@ -45,7 +45,7 @@
             </h6>
 
             <p>
-                I had the great pleasure of working with <a href="https://www.linkedin.com/in/wael-saleh-7a63a634/?originalSubdomain=ca">Dr. Wael Saleh</a> (Concordia University) to deliver the Heat Transfer course at McGill University. I was primarily responsible for weekly tutorials, consultation hours, revision sessions before midterm and final exams, and grading exams. This was probably the largest class I have ever taught, with approximately 75 students in the Fall 2023 semester and around 130 students in the Winter 2024 semester.
+                I had the great pleasure of working with <a href="https://www.linkedin.com/in/wael-saleh-7a63a634/?originalSubdomain=ca" target="_blank">Dr. Wael Saleh</a> (Concordia University) to deliver the Heat Transfer course at McGill University. I was primarily responsible for weekly tutorials, consultation hours, revision sessions before midterm and final exams, and grading exams. This was probably the largest class I have ever taught, with approximately 75 students in the Fall 2023 semester and around 130 students in the Winter 2024 semester.
             </p>
             <h3>
                 Radiative Heat Transfer 
@@ -55,7 +55,7 @@
                 Engineering students are familiar with the three mechanisms of heat transfer: (i) conduction, (ii) convection, and (iii) radiation. Among these, I enjoy teaching radiation the most. However, I have found that radiation is the topic students struggle with the most or are the least exposed to in heat transfer courses. One possible reason is that radiation is more closely related to physics (students need to understand some mechanisms of light), making it more abstract. I find that many mechanical engineering students can visualize conduction and convection more easily, as these processes involve tangible objects and working fluids and are more closely related to fluid mechanics.
             </p>
             <p>
-                At McGill University, I am fortunate to have had the opportunity to work with two experts in radiation. First, <a href="https://www.linkedin.com/in/melanie-tetreault-friend-p-eng-phd-2b7448109/">Prof. Mélanie Tétreault-Friend</a> – I took a specialized radiation course during my Ph.D. program, where I explored topics such as the radiative properties of real materials, radiation in absorbing/emitting/scattering media, numerical methods for solving radiative transfer equations (Monte Carlo ray tracing method), and real-world applications of radiation in solar collectors and concentrating solar power (CSP) technology. Second, <a href="https://profiles.faculty.utah.edu/u0715614">Prof. Mathieu Francoeur</a> – I collaborated with Prof. Francoeur at the University of Utah on various aspects of radiative heat transfer in metal-fuel combustion as part of my <a href="../education/PhD.html">Ph.D. research</a>. Prof. Francoeur is also an expert in thermophotovoltaic (TPV) cells, and through this collaboration, I have gained valuable exposure to TPV technology — an interdisciplinary collaboration that I highly appreciate.
+                At McGill University, I am fortunate to have had the opportunity to work with two experts in radiation. First, <a href="https://www.linkedin.com/in/melanie-tetreault-friend-p-eng-phd-2b7448109/" target="_blank">Prof. Mélanie Tétreault-Friend</a> – I took a specialized radiation course during my Ph.D. program, where I explored topics such as the radiative properties of real materials, radiation in absorbing/emitting/scattering media, numerical methods for solving radiative transfer equations (Monte Carlo ray tracing method), and real-world applications of radiation in solar collectors and concentrating solar power (CSP) technology. Second, <a href="https://profiles.faculty.utah.edu/u0715614" target="_blank">Prof. Mathieu Francoeur</a> – I collaborated with Prof. Francoeur at the University of Utah on various aspects of radiative heat transfer in metal-fuel combustion as part of my <a href="../education/PhD.html" target="_blank">Ph.D. research</a>. Prof. Francoeur is also an expert in thermophotovoltaic (TPV) cells, and through this collaboration, I have gained valuable exposure to TPV technology — an interdisciplinary collaboration that I highly appreciate.
             </p>
             <h3>
                 Making Learning Heat Transfer Fun! 
@@ -75,7 +75,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../teaching/image/WeinLaw.png" width="100%">
-                        <label>Wein's Displacement Law - reproduced from <a href="  https://www.thermal-engineering.org/what-is-wiens-displacement-law-definition/">Thermal Engineering</a></label>
+                        <label>Wein's Displacement Law - reproduced from <a href="  https://www.thermal-engineering.org/what-is-wiens-displacement-law-definition/" target="_blank">Thermal Engineering</a></label>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
                         <img src="../teaching/image/MarsEclipse.png" width="60%">
-                        <label>"Solar eclipse" when Phobos passes in front of the Sun when viewed from Mars - reproduced from <a href="https://photojournal.jpl.nasa.gov/catalog/PIA17356">NASA JPL-Caltech</a></label>
+                        <label>"Solar eclipse" when Phobos passes in front of the Sun when viewed from Mars - reproduced from <a href="https://photojournal.jpl.nasa.gov/catalog/PIA17356" target="_blank">NASA JPL-Caltech</a></label>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
