--- a/professional/FACC511.html
+++ b/professional/FACC511.html
@@ -56,10 +56,12 @@
         <hr>
         <p>
             In Canada, every accredited engineering program of all institutions aligns with the CEAB Graduate Attributes framework, which defines 12 essential competencies for engineering graduates. These attributes ensure that graduates are:
-            &#10004; Competent, well-rounded, and prepared for professional engineering licensing path (e.g. P.Eng.).
-            &#10004; Equipped with technical, ethical, and professional skills required for real-world applications.
-            &#10004; Meeting high-quality professional standards in engineering education.
-            &#10004; Benefiting from global recognition and licensure mobility.
+            <ul style="list-style-type: none; padding: 0; margin: 0;">
+                <li>&#10004; Competent, well-rounded, and prepared for professional engineering licensing path (e.g., P.Eng.).</li>
+                <li>&#10004; Equipped with technical, ethical, and professional skills required for real-world applications.</li>
+                <li>&#10004; Meeting high-quality professional standards in engineering education.</li>
+                <li>&#10004; Benefiting from global recognition and licensure mobility.</li>
+            </ul>
         </p>
 
         <div class="container">
@@ -87,9 +89,11 @@
 
         <p>
             Why is Bloom’s Taxonomy Important?
-            &#10004; Helps educators structure curriculum development by covering a range of cognitive skills.
-            &#10004; Ensures that assessments go beyond memorization and test higher-order thinking.
-            &#10004; Encourages active learning strategies that push students toward deeper engagement and understanding.
+            <ul style="list-style-type: none; padding: 0; margin: 0;">
+                <li>&#10004; Helps educators structure curriculum development by covering a range of cognitive skills.</li>
+                <li>&#10004; Ensures that assessments go beyond memorization and test higher-order thinking.</li>
+                <li>&#10004; Encourages active learning strategies that push students toward deeper engagement and understanding.</li>
+            </ul>
         </p>
 
         <div class="container">
