--- a/teaching/heattransfer.html
+++ b/teaching/heattransfer.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="col-md-6">
                         <img src="../teaching/image/Totality.jpg" width="100%">
-                        <label>Totality at 1527 hrs on 8 April 2024 in Montreal with visible corona</label>
+                        <label>Totality with visible corona at 1527 hrs on 8 April 2024 in Montreal</label>
                     </div>
                 </div>
             </div>
