--- a/travel/summary.html
+++ b/travel/summary.html
@@ -89,7 +89,7 @@
 
                             <div class="mySlides fade">
                                 <div class="numbertext">8 / 8</div>
-                                <img src="../travel/image/SwitzerlandMatterhorn.jpg" style="width:100%">
+                                <img src="../travel/image/SwitzerlandMatterhorn.png" style="width:100%">
                                 <div class="text">Adventure at the Matterhorn Glacier Paradise, Switzerland, the highest mountain station in Europe.</div>
                             </div>
                         </div>
