--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
                                     H. CLOUD HENG 
                                 </h4>
                                 <div style="text-align: left">  
-                                    <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:hermanhgy@gmail.com"> hermanhgy@gmail.com </a>
+                                    <i class="fa fa-envelope"></i><a class="whitelink" href="mailto:cloud.heng@mail.mcgill.ca">cloud.heng@mail.mcgill.ca</a>
                                 </div >
                                 <div>
-                                    <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="icon/facebook.png" class="social-media-home"></a>
+                                    <!-- <a href="https://web.facebook.com/herman.heng1" data-toggle="tooltip" data-placement="top" title="Facebook"><img src="icon/facebook.png" class="social-media-home"></a> -->
                                     <a href="https://www.linkedin.com/in/herman-heng-b5a08292/" data-toggle="tooltip" data-placement="top" title="Linkedin"><img src="icon/linkedin.png" class="social-media-home"></a>
-                                    <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="icon/instagram.png" class="social-media-home"></a>
+                                    <!-- <a href="https://www.instagram.com/cdcloud/" data-toggle="tooltip" data-placement="top" title="Instagram"><img src="icon/instagram.png" class="social-media-home"></a> -->
                                     <a href="https://scholar.google.com/citations?user=-PfuakYAAAAJ&hl=en" data-toggle="tooltip" data-placement="top" title="Google Scholar"><img src="icon/GS2.png" class="social-media-home"></a>
                                     <a href="https://join.skype.com/invite/rkkjw5ggin8z" data-toggle="tooltip" data-placement="top" title="Skype"><img src="icon/skype.jpg" class="social-media-home"></a>
-                                    <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a>
+                                    <!-- <a href="https://www.couchsurfing.com/people/herman-heng-1" data-toggle="tooltip" data-placement="top" title="Couchsurfing"><img src="icon/CS.png" class="social-media-home"></a> -->
                                 </div>
                                 <div>
-                                    <img src="icon/GCE_Badges_02.png" width="50%">
+                                    <!-- <img src="icon/GCE_Badges_02.png" width="50%"> -->
                                 </div>
                             </div>
                         </div>
