--- a/teaching/heattransfer.html
+++ b/teaching/heattransfer.html
@@ -61,7 +61,7 @@
                 Making Learning Heat Transfer Fun! 
             </h3>
             <p>
-                With my background in radiation, my goal is to make this topic engaging and accessible so students can appreciate its relevance despite its abstract nature. One of my approaches is to connect radiation to observable real-world phenomena. For example, I ask my students: “How can we have a rough idea on how hot is an object by observing its colour?” This concept is explained by Wien’s Displacement Law,  a fundamental concept in heat transfer, which describes how an object’s peak wavelength shifts with temperature - hotter objects emit shorter wavelengths. The YouTube video below demonstrates this concept beautifully:
+                With my background in radiation, my goal is to make this topic engaging so that students can appreciate its relevance despite its abstract nature. One of my approaches is to connect radiation to observable real-world phenomena. For example, I ask my students: “How can we have a rough idea on how hot is an object by observing its colour?” This concept is explained by Wien’s Displacement Law,  a fundamental concept in heat transfer, which describes how an object’s peak wavelength shifts with temperature - hotter objects emit shorter wavelengths. The YouTube video below demonstrates this concept beautifully:
             </p>
 
             <div class="paragraph image">
