--- a/teaching/experience.html
+++ b/teaching/experience.html
@@ -85,7 +85,7 @@
                         Wrote course outlines based on Canadian Engineering Accreditation Board (CEAB) Graduate Attributes, engaged in self-reflective teaching practice, developed assessment strategies, and designed an engineering course.  
                     </li>
                     <li>
-                        <a href=".../professional/GPS974.html">Graduate Professional Skills Certificate</a> (one semester):  
+                        <a href="../professional/GPS974.html">Graduate Professional Skills Certificate</a> (one semester):  
                         Created a personal portfolio including a mission statement, learning objectives, and plans to achieve the mission, along with reflective professional skills development. The course was also designed to foster critical thinking skills. 
                     </li>
                 </ul>
