--- a/education/PhD.html
+++ b/education/PhD.html
@@ -114,7 +114,7 @@
             </p>
             
             <p>
-                What about we could <b>store</b> renewable energy instead? For example, We could store solar energy when solar intensity is high in the summer and then transport that stored energy to various locations for later use Electrical energy itself cannot be stored. However, we can convert that electrical energy (converted from renewable sources) into chemical energy - a form of energy that can be transported and used when needed. A simple example is a battery — it stores energy chemically and can be used on demand. But why haven't batteries solved the energy crisis? Because batteries have a very low energy density — to perform high-energy-demand tasks like space heating, you would need an extremely large and heavy battery, which is impractical.
+                What about we could <b>store</b> renewable energy instead? For example, We could store solar energy when solar intensity is high in the summer and then transport that stored energy to various locations for later use. Electrical energy itself cannot be stored. However, we can convert that electrical energy (converted from renewable sources) into chemical energy - a form of energy that can be transported and used when needed. A simple example is a battery — it stores energy chemically and can be used on demand. But why haven't batteries solved the energy crisis? Because batteries have a very low energy density — to perform high-energy-demand tasks like space heating, you would need an extremely large and heavy battery, which is impractical.
             </p>
             
             <p>
